@@ -31,22 +31,16 @@ public class PresupuestoService {
     // ==========================================
     // CREACIÓN
     // ==========================================
-
     public PresupuestoResponseDTO crearPresupuesto(
             Long usuarioId,
             CrearPresupuestoDTO dto
     ) {
 
-        log.info("Creando presupuesto para usuario ID: {}", usuarioId);
-
         Usuario usuario = usuarioRepo.findById(usuarioId)
-                .orElseThrow(() ->
-                        new UsuarioNoEncontradoException(usuarioId));
+                .orElseThrow(() -> new UsuarioNoEncontradoException(usuarioId));
 
         if (dto.getFechaFin().isBefore(dto.getFechaInicio())) {
-            throw new IllegalArgumentException(
-                    "La fecha de fin debe ser posterior a la fecha de inicio"
-            );
+            throw new IllegalArgumentException("Fecha fin inválida");
         }
 
         Presupuesto presupuesto = Presupuesto.builder()
@@ -61,20 +55,16 @@ public class PresupuestoService {
 
         presupuesto = presupuestoRepo.save(presupuesto);
 
-        if (dto.getLimitesCategorias() != null &&
-                !dto.getLimitesCategorias().isEmpty()) {
-
-            crearLimitesCategorias(
-                    presupuesto,
-                    dto.getLimitesCategorias()
-            );
+        if (dto.getLimitesCategorias() != null && !dto.getLimitesCategorias().isEmpty()) {
+            crearLimitesCategorias(presupuesto, dto.getLimitesCategorias());
         }
-
-        log.info("Presupuesto creado con ID: {}", presupuesto.getId());
 
         return convertirAResponse(presupuesto);
     }
 
+    // ==========================================
+    // LIMITES CATEGORÍAS
+    // ==========================================
     private void crearLimitesCategorias(
             Presupuesto presupuesto,
             Map<Long, BigDecimal> limites
@@ -82,280 +72,59 @@ public class PresupuestoService {
 
         BigDecimal sumaLimites = BigDecimal.ZERO;
 
-        for (Map.Entry<Long, BigDecimal> entry : limites.entrySet()) {
+        for (var entry : limites.entrySet()) {
 
-            Long categoriaId = entry.getKey();
+            Categoria categoria = categoriaRepo.findById(entry.getKey())
+                    .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
+
             BigDecimal monto = entry.getValue();
 
-            Categoria categoria = categoriaRepo.findById(categoriaId)
-                    .orElseThrow(() ->
-                            new RuntimeException(
-                                    "Categoría no encontrada: " + categoriaId
-                            ));
+            CategoryLimit limit = new CategoryLimit();
+            limit.setPresupuesto(presupuesto);
+            limit.setCategoria(categoria);
 
-            CategoryLimit limite = new CategoryLimit();
+            // ⚠️ mantener coherencia con double si tu entity aún lo usa
+            limit.setLimiteAsignado(monto.doubleValue());
+            limit.setGastoActual(0.0);
 
-            limite.setPresupuesto(presupuesto);
-            limite.setCategoria(categoria);
-
-            // ⚠️ AJUSTAR SEGÚN TU ENTITY
-            limite.setLimiteAsignado(monto.doubleValue());
-            limite.setGastoActual(0.0);
-
-            categoryLimitRepo.save(limite);
+            categoryLimitRepo.save(limit);
 
             sumaLimites = sumaLimites.add(monto);
         }
 
         if (sumaLimites.compareTo(presupuesto.getMontoTotal()) > 0) {
-
-            throw new IllegalArgumentException(
-                    "La suma de límites excede el presupuesto total"
-            );
+            throw new IllegalArgumentException("Límites exceden presupuesto");
         }
-
-        log.info(
-                "Se crearon {} límites para presupuesto ID: {}",
-                limites.size(),
-                presupuesto.getId()
-        );
     }
 
     // ==========================================
     // CONSULTAS
     // ==========================================
-
-    @Transactional(readOnly = true)
     public PresupuestoResponseDTO buscarPorId(Long id) {
-
-        log.info("Buscando presupuesto ID: {}", id);
-
-        Presupuesto presupuesto = presupuestoRepo.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Presupuesto no encontrado: " + id
-                        ));
-
-        return convertirAResponse(presupuesto);
+        return convertirAResponse(
+                presupuestoRepo.findById(id)
+                        .orElseThrow(() -> new RuntimeException("No encontrado"))
+        );
     }
 
-    @Transactional(readOnly = true)
     public List<PresupuestoResponseDTO> listarPorUsuario(Long usuarioId) {
-
-        log.info("Listando presupuestos del usuario ID: {}", usuarioId);
-
-        return presupuestoRepo
-                .findByUsuarioIdOrderByFechaCreacionDesc(usuarioId)
+        return presupuestoRepo.findByUsuarioIdOrderByFechaCreacionDesc(usuarioId)
                 .stream()
                 .map(this::convertirAResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Transactional(readOnly = true)
-    public List<PresupuestoResponseDTO> listarPorUsuarioYEstado(
-            Long usuarioId,
-            BudgetStatus status
-    ) {
-
-        log.info(
-                "Listando presupuestos del usuario {} con estado {}",
-                usuarioId,
-                status
-        );
-
-        return presupuestoRepo
-                .findByUsuarioIdAndStatus(usuarioId, status)
-                .stream()
-                .map(this::convertirAResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Transactional(readOnly = true)
-    public PresupuestoResponseDTO buscarPresupuestoActual(Long usuarioId) {
-
-        log.info(
-                "Buscando presupuesto activo actual del usuario ID: {}",
-                usuarioId
-        );
-
-        Presupuesto presupuesto = presupuestoRepo
-                .findPresupuestoActivoActual(
-                        usuarioId,
-                        BudgetStatus.ACTIVE,
-                        LocalDateTime.now()
-                )
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "No hay presupuesto activo actualmente"
-                        ));
-
-        return convertirAResponse(presupuesto);
-    }
-
-    // ==========================================
-    // ACTUALIZACIÓN
-    // ==========================================
-
-    public PresupuestoResponseDTO actualizarPresupuesto(
-            Long id,
-            ActualizarPresupuestoDTO dto
-    ) {
-
-        log.info("Actualizando presupuesto ID: {}", id);
-
-        Presupuesto presupuesto = presupuestoRepo.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Presupuesto no encontrado: " + id
-                        ));
-
-        if (!presupuesto.getStatus().getPuedeEditar()) {
-
-            throw new IllegalStateException(
-                    "No se puede editar un presupuesto en estado "
-                            + presupuesto.getStatus()
-            );
-        }
-
-        if (dto.getNombre() != null) {
-            presupuesto.setNombre(dto.getNombre());
-        }
-
-        if (dto.getMontoTotal() != null) {
-            presupuesto.setMontoTotal(dto.getMontoTotal());
-        }
-
-        if (dto.getFechaInicio() != null) {
-            presupuesto.setFechaInicio(dto.getFechaInicio());
-        }
-
-        if (dto.getFechaFin() != null) {
-            presupuesto.setFechaFin(dto.getFechaFin());
-        }
-
-        if (dto.getPeriodo() != null) {
-            presupuesto.setPeriodo(dto.getPeriodo());
-        }
-
-        presupuesto = presupuestoRepo.save(presupuesto);
-
-        log.info("Presupuesto actualizado: {}", id);
-
-        return convertirAResponse(presupuesto);
-    }
-
-    // ==========================================
-    // ESTADOS
-    // ==========================================
-
-    public PresupuestoResponseDTO activarPresupuesto(Long id) {
-
-        Presupuesto presupuesto = presupuestoRepo.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Presupuesto no encontrado"
-                        ));
-
-        if (!presupuesto.getStatus().puedeActivarse()) {
-
-            throw new IllegalStateException(
-                    "No se puede activar desde el estado "
-                            + presupuesto.getStatus()
-            );
-        }
-
-        presupuesto.setStatus(BudgetStatus.ACTIVE);
-
-        presupuesto = presupuestoRepo.save(presupuesto);
-
-        log.info("Presupuesto activado: {}", id);
-
-        return convertirAResponse(presupuesto);
-    }
-
-    public PresupuestoResponseDTO pausarPresupuesto(Long id) {
-
-        Presupuesto presupuesto = presupuestoRepo.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Presupuesto no encontrado"
-                        ));
-
-        if (!presupuesto.getStatus().puedePausarse()) {
-
-            throw new IllegalStateException(
-                    "No se puede pausar desde el estado "
-                            + presupuesto.getStatus()
-            );
-        }
-
-        presupuesto.setStatus(BudgetStatus.PAUSED);
-
-        presupuesto = presupuestoRepo.save(presupuesto);
-
-        log.info("Presupuesto pausado: {}", id);
-
-        return convertirAResponse(presupuesto);
-    }
-
-    public PresupuestoResponseDTO completarPresupuesto(Long id) {
-
-        Presupuesto presupuesto = presupuestoRepo.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Presupuesto no encontrado"
-                        ));
-
-        presupuesto.setStatus(BudgetStatus.COMPLETED);
-
-        presupuesto = presupuestoRepo.save(presupuesto);
-
-        log.info("Presupuesto completado: {}", id);
-
-        return convertirAResponse(presupuesto);
-    }
-
-    public void eliminarPresupuesto(Long id) {
-
-        log.info("Eliminando presupuesto ID: {}", id);
-
-        Presupuesto presupuesto = presupuestoRepo.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Presupuesto no encontrado"
-                        ));
-
-        if (presupuesto.getStatus() != BudgetStatus.DRAFT &&
-                presupuesto.getExpenses() != null &&
-                !presupuesto.getExpenses().isEmpty()) {
-
-            throw new IllegalStateException(
-                    "No se puede eliminar un presupuesto con gastos"
-            );
-        }
-
-        presupuestoRepo.delete(presupuesto);
-
-        log.info("Presupuesto eliminado: {}", id);
+                .toList();
     }
 
     // ==========================================
     // ESTADÍSTICAS
     // ==========================================
+    public EstadisticasPresupuestoDTO obtenerEstadisticas(Long usuarioId) {
 
-    @Transactional(readOnly = true)
-    public EstadisticasPresupuestoDTO obtenerEstadisticas(
-            Long usuarioId
-    ) {
-
-        List<Presupuesto> presupuestos =
-                presupuestoRepo.findByUsuarioId(usuarioId);
+        List<Presupuesto> presupuestos = presupuestoRepo.findByUsuarioId(usuarioId);
 
         if (presupuestos.isEmpty()) {
-
             return EstadisticasPresupuestoDTO.builder()
                     .totalPresupuestos(0)
-                    .mensaje("No hay presupuestos registrados")
+                    .mensaje("Sin datos")
                     .build();
         }
 
@@ -367,181 +136,102 @@ public class PresupuestoService {
                 .map(this::calcularGastoTotal)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        BigDecimal totalRestante =
-                totalPresupuestado.subtract(totalGastado);
+        BigDecimal totalRestante = totalPresupuestado.subtract(totalGastado);
 
-        Double porcentajeGasto =
-                totalPresupuestado.compareTo(BigDecimal.ZERO) > 0
-                        ? totalGastado
-                        .divide(
-                                totalPresupuestado,
-                                4,
-                                RoundingMode.HALF_UP
-                        )
-                        .multiply(BigDecimal.valueOf(100))
-                        .doubleValue()
-                        : 0.0;
-
-        long activos = presupuestos.stream()
-                .filter(p -> p.getStatus() == BudgetStatus.ACTIVE)
-                .count();
-
-        long completados = presupuestos.stream()
-                .filter(p -> p.getStatus() == BudgetStatus.COMPLETED)
-                .count();
-
-        long excedidos = presupuestos.stream()
-                .filter(p -> p.getStatus() == BudgetStatus.EXCEEDED)
-                .count();
+        Double porcentaje = totalPresupuestado.compareTo(BigDecimal.ZERO) > 0
+                ? totalGastado
+                .divide(totalPresupuestado, 4, RoundingMode.HALF_UP)
+                .multiply(BigDecimal.valueOf(100))
+                .doubleValue()
+                : 0.0;
 
         return EstadisticasPresupuestoDTO.builder()
                 .totalPresupuestos(presupuestos.size())
-                .presupuestosActivos((int) activos)
-                .presupuestosCompletados((int) completados)
-                .presupuestosExcedidos((int) excedidos)
                 .totalPresupuestado(totalPresupuestado)
                 .totalGastado(totalGastado)
                 .totalRestante(totalRestante)
-                .porcentajeGastoGeneral(porcentajeGasto)
-                .mensaje("Estadísticas generadas exitosamente")
+                .porcentajeGastoGeneral(porcentaje)
                 .build();
     }
 
     // ==========================================
-    // AUXILIARES
+    // MAPPER
     // ==========================================
+    private PresupuestoResponseDTO convertirAResponse(Presupuesto presupuesto) {
 
-    private PresupuestoResponseDTO convertirAResponse(
-            Presupuesto presupuesto
-    ) {
+        BigDecimal gastoTotal = calcularGastoTotal(presupuesto);
+        BigDecimal total = presupuesto.getMontoTotal() != null
+                ? presupuesto.getMontoTotal()
+                : BigDecimal.ZERO;
 
-        BudgetStatus status = presupuesto.getStatus();
+        BigDecimal restante = total.subtract(gastoTotal);
 
-        BigDecimal gastoTotal =
-                calcularGastoTotal(presupuesto);
-
-        BigDecimal restante =
-                presupuesto.getMontoTotal()
-                        .subtract(gastoTotal);
-
-        Double porcentaje =
-                presupuesto.getMontoTotal().compareTo(BigDecimal.ZERO) > 0
-                        ? gastoTotal
-                        .divide(
-                                presupuesto.getMontoTotal(),
-                                4,
-                                RoundingMode.HALF_UP
-                        )
-                        .multiply(BigDecimal.valueOf(100))
-                        .doubleValue()
-                        : 0.0;
+        Double porcentaje = total.compareTo(BigDecimal.ZERO) > 0
+                ? gastoTotal
+                .divide(total, 4, RoundingMode.HALF_UP)
+                .multiply(BigDecimal.valueOf(100))
+                .doubleValue()
+                : 0.0;
 
         List<PresupuestoResponseDTO.LimiteCategoriaDTO> limites =
-                presupuesto.getLimitesCategorias()
+                presupuesto.getLimitesCategorias() == null
+                        ? List.of()
+                        : presupuesto.getLimitesCategorias()
                         .stream()
                         .map(this::convertirLimiteADTO)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return PresupuestoResponseDTO.builder()
                 .id(presupuesto.getId())
                 .usuarioId(presupuesto.getUsuario().getId())
-                .usuarioNombre(presupuesto.getUsuario().getNombre())
                 .nombre(presupuesto.getNombre())
-                .montoTotal(presupuesto.getMontoTotal())
+                .montoTotal(total)
                 .montoGastado(gastoTotal)
                 .montoRestante(restante)
                 .porcentajeGastado(porcentaje)
-                .status(status)
-                .statusDisplay(status.getDisplayName())
-                .statusColor(status.getColorHex())
-                .periodo(presupuesto.getPeriodo())
-                .periodoDisplay(
-                        presupuesto.getPeriodo().getDisplayName()
-                )
-                .duracionDias(
-                        presupuesto.getPeriodo().getDuracionDias()
-                )
+                .status(presupuesto.getStatus())
                 .fechaInicio(presupuesto.getFechaInicio())
                 .fechaFin(presupuesto.getFechaFin())
-                .fechaCreacion(presupuesto.getFechaCreacion())
-                .totalGastos(
-                        presupuesto.getExpenses() != null
-                                ? presupuesto.getExpenses().size()
-                                : 0
-                )
-                .totalCategorias(limites.size())
-                .estaVigente(estaVigente(presupuesto))
-                .estaCercaDelLimite(porcentaje >= 80.0)
-                .estaExcedido(
-                        gastoTotal.compareTo(
-                                presupuesto.getMontoTotal()
-                        ) > 0
-                )
-                .puedeEditar(status.getPuedeEditar())
-                .puedeRegistrarGastos(
-                        status.getPuedeRegistrarGastos()
-                )
+                .totalGastos(presupuesto.getExpenses() != null ? presupuesto.getExpenses().size() : 0)
                 .limitesCategorias(limites)
                 .build();
     }
 
-    private PresupuestoResponseDTO.LimiteCategoriaDTO convertirLimiteADTO(
-            CategoryLimit limite
-    ) {
+    // ==========================================
+    // LIMITE DTO
+    // ==========================================
+    private PresupuestoResponseDTO.LimiteCategoriaDTO convertirLimiteADTO(CategoryLimit limite) {
 
-        BigDecimal limiteAsignado =
-                BigDecimal.valueOf(limite.getLimiteAsignado());
+        BigDecimal asignado = BigDecimal.valueOf(limite.getLimiteAsignado());
+        BigDecimal gastado = BigDecimal.valueOf(limite.getGastoActual());
 
-        BigDecimal gastoActual =
-                BigDecimal.valueOf(limite.getGastoActual());
+        BigDecimal restante = asignado.subtract(gastado);
 
-        BigDecimal restante =
-                limiteAsignado.subtract(gastoActual);
+        Double porcentaje = limite.getLimiteAsignado() > 0
+                ? gastado.divide(asignado, 4, RoundingMode.HALF_UP)
+                .multiply(BigDecimal.valueOf(100))
+                .doubleValue()
+                : 0.0;
 
-        Double porcentaje =
-                limite.getLimiteAsignado() > 0
-                        ? (limite.getGastoActual()
-                        / limite.getLimiteAsignado()) * 100
-                        : 0.0;
-
-        return PresupuestoResponseDTO
-                .LimiteCategoriaDTO
-                .builder()
+        return PresupuestoResponseDTO.LimiteCategoriaDTO.builder()
                 .categoriaId(limite.getCategoria().getId())
-                .categoriaNombre(
-                        limite.getCategoria().getNombre()
-                )
-                .categoriaIcono(
-                        limite.getCategoria().getIcono()
-                )
-                .limiteAsignado(limiteAsignado)
-                .gastoActual(gastoActual)
+                .categoriaNombre(limite.getCategoria().getNombre())
+                .limiteAsignado(asignado)
+                .gastoActual(gastado)
                 .restante(restante)
                 .porcentajeUtilizado(porcentaje)
-                .estaCercaDelLimite(porcentaje >= 80.0)
-                .excedido(
-                        gastoActual.compareTo(limiteAsignado) > 0
-                )
                 .build();
     }
 
+    // ==========================================
+    // AUX
+    // ==========================================
     private BigDecimal calcularGastoTotal(Presupuesto presupuesto) {
-
-        if (presupuesto.getExpenses() == null) {
-            return BigDecimal.ZERO;
-        }
+        if (presupuesto.getExpenses() == null) return BigDecimal.ZERO;
 
         return presupuesto.getExpenses()
                 .stream()
                 .map(Expense::getMonto)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-    }
-
-    private boolean estaVigente(Presupuesto presupuesto) {
-
-        LocalDateTime ahora = LocalDateTime.now();
-
-        return ahora.isAfter(presupuesto.getFechaInicio())
-                && ahora.isBefore(presupuesto.getFechaFin());
     }
 }
